main.css
html, body {
  overscroll-behavior: none;
  touch-action: pan-x pan-y;
}
html {
  margin: 0;
  padding: 0;
  overflow: hidden;
  box-sizing: border-box;
  width: 100vw;
  height: 100vh;
}
body {
  margin: 0;
  padding: 5px;
  display: flex;
  flex-direction: column;
  height: 100dvh;
  box-sizing: border-box;
}
h1 {
  font-size: 1.5em;
  font-weight: bold;
  color: #333;
  background-color: white;
  border-radius: 3px;
  padding: 0px;
  margin: 0px;
  text-align: center;
}
form {
  width: 100%;
  margin: 0 auto;
  padding: 0px;
  background: #fff;
  display: flex;
  flex-wrap: wrap;
  max-width: 600px;
}
fieldset {
  border: 1px solid #ccc;
  border-radius: 3px;
  padding: 5px;
  margin: 5px;
  box-shadow: 0 0 5px #ccc;
  width: 100%;
  box-sizing: border-box;
  /* display children in a 2 row, 3 column grid*/
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: auto auto;
  flex: 1;
}
fieldset:first-of-type {
  margin-left: 0;
}
fieldset:last-of-type {
  margin-right: 0;
}
legend {
  font-size: 1.2em;
  font-weight: bold;
  color: #333;
  background-color: white;
  border: 1px solid #ccc;
  border-radius: 3px;
}
label {
  font-size: 0.8em;
  margin: 0;
  padding: 0;
  color: #333;
  font-weight: bold;
  display: flex;
  align-items: center;
  padding: 0px;
  /* minimize the height to the text */
  height: 1.5em;
}
input {
    border: 1px solid #ccc;
    border-radius: 3px;
    padding: 5px;
    margin: 5px 0;
    box-shadow: 0 0 5px #ccc;
    width: 100%;
    box-sizing: border-box;
    font-size: 16px;
}
button {
    background-color: maroon;
    color: white;
    padding: 10px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    width: 100%;
}
canvas {
    border: 2px solid #ccc;
    padding: 0px;
    margin: 10px auto;
    display: block;
    width: 100%;
    box-sizing: border-box;
    max-width: 600px;
    flex: 1;
}
#result {
    display: flex;

    justify-content: space-around;
    padding: 0px;
    margin: 0px;
    list-style-type: none;
    width: 100%;
    box-sizing: border-box;
}
#result span {

    font-weight: bold;
    color: #333;
    background-color: white;
    /* make min width enough for 3 chars */
    min-width: 3em;
    text-align: center;
}

